# senda

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent_runtime.rs  agent_watcher.rs  db.rs  lib.rs  main.rs  mcp_client.rs  mcp_watcher.rs  output_webhooks.rs  scheduler_host.rs  secrets.rs  sync.rs
apps/desktop/src-tauri/src/commands/: agents.rs  automations.rs  discovery.rs  editor.rs  execution.rs  generate.rs  greeting.rs  mod.rs  oauth.rs  os_scheduler.rs  publish.rs  repos.rs  system.rs
apps/desktop/src/components/: AgentCard.tsx  AgentErrorCard.tsx  Sidebar.tsx
apps/desktop/src/data/: automation-templates.ts  mcp-catalog.ts
apps/desktop/src/lib/: markdown.ts
apps/desktop/src/pages/: AddRepository.tsx  AgentDetail.tsx  AgentEditor.tsx  AgentRunner.tsx  Approvals.tsx  Automations.tsx  Catalog.tsx  CreateAutomation.tsx  CreateWizard.tsx  History.tsx  Mcps.tsx  PublishFlow.tsx  RepoDetail.tsx  Settings.tsx  Skills.tsx
apps/desktop/src/stores/: approvals.ts  catalog.ts  discovery.ts  repos.ts
crates/acp-client/: Cargo.toml  README.md
crates/acp-client/src/: error.rs  lib.rs  protocol.rs  session.rs  transport.rs
crates/acp-client/tests/: integration.rs
crates/agent-parser/: Cargo.toml
crates/agent-parser/src/: canonical.rs  lib.rs  native.rs  warnings.rs
crates/agent-parser/src/transpilers/: claude_code.rs  copilot.rs  gemini.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  automation.rs  cli.rs  lib.rs  repo.rs  run.rs
crates/git-providers/: Cargo.toml
crates/git-providers/src/: azure.rs  generic.rs  git_ops.rs  github.rs  http.rs  lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
docs/: architecture.md  distribution.md  format-conversion.md
