[package]
name = "senda-acp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Async ACP (Agent Client Protocol) client over JSON-RPC stdio. Spawns agent processes (Claude Code, Gemini CLI, etc.) and exposes a streaming session API."
readme = "README.md"
keywords = ["acp", "agent", "ai", "json-rpc"]
categories = ["asynchronous", "api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tracing-subscriber = { workspace = true }
