[package]
name = "senda-agent-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical Senda agent format with transpilers to Copilot CLI / Claude Code / Gemini CLI."

[dependencies]
senda-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = "0.9"

[dev-dependencies]
indoc = "2"
