[package]
name = "senda-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain types for Senda — agents, repos, schedules, automations."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
