[package]
name = "senda-git-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RepoProvider trait + GitHub / Azure / Generic implementations for Senda."

[dependencies]
senda-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
