[package]
name = "senda-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Senda desktop app — Tauri shell."

[lib]
name = "senda_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

senda-core = { workspace = true }
senda-acp-client = { workspace = true }
senda-git-providers = { workspace = true }
senda-agent-parser = { workspace = true }
senda-scheduler = { workspace = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true }
dirs = "5"
portable-pty = "0.9"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
whoami = "1"
notify = "7"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
